<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/reportsFragment"
        android:icon="@drawable/ic_reports"
        android:title="@string/reports" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        />

    <item
        android:id="@+id/newsActivity"
        android:icon="@drawable/ic_baseline_newspaper"
        android:title="@string/news"
        />

    <item
        android:id="@+id/notaScansActivity"
        android:icon="@drawable/ic_baseline_photo_camera"
        android:title="@string/scan_nota"
        />

</menu>