<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.newswebview.NewsDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="@android:color/white"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/title"
        android:gravity="center"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textPublishedAt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="15sp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/textSource"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/news_source"
            android:textSize="15sp"
            android:gravity="end"
            android:layout_marginBottom="8dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/url"
        android:textSize="15sp"
        android:textColor="@color/blue_500"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textAlignment="textStart"
        android:text="@string/news_description"
        android:textSize="13sp"/>

    <TextView
        android:id="@+id/textContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textAlignment="textStart"
        android:layout_marginTop="10dp"
        android:text="@string/news_content"
        android:textSize="13sp"/>

</LinearLayout>